# M2

./: 1.Sis_Cine.py  10.Transposicion_matriz.py  12.Lanzar_dados.py  13.Aventura.py  14.Ahorcado.py  15.Naval.py  2.Comandos_simple.py  6.Posiciones_enum.py  9.Transformacion_datos.py  pyproject.toml
tests/: test_1.py
